--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "wfxiang08/geoip",
-  "description": "geip ip rpc service",
+  "name": "wfxiang08/url_manager",
+  "description": "url_manager ip rpc service",
   "keywords": [
     "framework",
     "rpc",
